--- a/views/register.ejs
+++ b/views/register.ejs
@@ -32,7 +32,7 @@
                 <option value="Edo">Edo</option>
                 <option value="Ekiti">Ekiti</option>
                 <option value="Enugu">Enugu</option>
-                <option value="FCT">Federal Capital Territory</option>
+                <option value="Abuja">Abuja</option>
                 <option value="Gombe">Gombe</option>
                 <option value="Imo">Imo</option>
                 <option value="Jigawa">Jigawa</option>
