--- a/views/register.ejs
+++ b/views/register.ejs
@@ -65,10 +65,10 @@
             <br><br>
             <input type="password" name="Password" required minlength="6" maxlength="14" id="">
             <br><br>
-            <label for="HospitalDoc1">Hospital Doc1: images only </label>
+            <label for="HospitalDoc1">Hospital Doc1: images of your hospital </label>
             <input type="file" name="HospitalDoc1" accept="image/*" required id="">
             <br><br>
-            <label for="HospitalDoc2">Hospital Doc2: images only </label>
+            <label for="HospitalDoc2">Hospital Doc2: valid image of your hospital documentation only </label>
             <input type="file" name="HospitalDoc2" accept="image/*" required id="">
             <br><br>
             <button type="submit">Register</button>
