--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,6 +19,7 @@
             <select name="State" required  id="">
                 <option disabled selected>--Select State--</option>
                 <option value="Abia">Abia</option>
+                <option value="Abuja">Abuja</option>
                 <option value="Adamawa">Adamawa</option>
                 <option value="Akwa Ibom">Akwa Ibom</option>
                 <option value="Anambra">Anambra</option>
@@ -32,7 +33,6 @@
                 <option value="Edo">Edo</option>
                 <option value="Ekiti">Ekiti</option>
                 <option value="Enugu">Enugu</option>
-                <option value="Abuja">Abuja</option>
                 <option value="Gombe">Gombe</option>
                 <option value="Imo">Imo</option>
                 <option value="Jigawa">Jigawa</option>
@@ -63,7 +63,7 @@
             <br><br>
             <input type="tel" name="PhoneNumber" minlength="11" maxlength="11" required placeholder="Phone Number" id="">
             <br><br>
-            <input type="password" name="Password" required minlength="6" maxlength="14" id="">
+            <input type="password" name="Password" required minlength="6" placeholder="password" maxlength="14" id="">
             <br><br>
             <label for="HospitalDoc1">Hospital Doc1: images of your hospital </label>
             <input type="file" name="HospitalDoc1" accept="image/*" required id="">
