--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Register</title>
 </head>
 <body>
+    <div class="box">
     <center>
         <h2>Register Hospital</h2>
         <p><%= msg %></p>
@@ -75,5 +77,6 @@
         </form> 
         <a href="/login">login</a>
     </center>
+    </div>
 </body>
 </html>
