--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="/4o4/style404.css">
+
     <title>404</title>
 </head>
 <body>
-    <h1>404 page</h1>
+
+	<div id="notfound">
+		<div class="notfound">
+			<div class="notfound-404">
+				<h1>Oops!</h1>
+				<h2>404 - The Page can't be found</h2>
+			</div>
+			<a href="/register">Go TO Homepage</a>
+		</div>
+	</div>
+
+
 </body>
 </html>
