--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,74 +9,80 @@
 </head>
 <body>
     <div class="box">
-    <center>
-        <h2>Register Hospital</h2>
-        <p><%= msg %></p>
-        <form action="/register" enctype="multipart/form-data" method="post">
-            <input type="text" name="Name" placeholder="Name" id="" maxlength="30" minlength="7" required>
-            <br><br>
-            <input type="email" name="Email" placeholder="Email" maxlength="30" required minlength="7" id="">
-            <br><br>
-           
-            <select name="State" required  id="">
-                <option disabled selected>--Select State--</option>
-                <option value="Abia">Abia</option>
-                <option value="Abuja">Abuja</option>
-                <option value="Adamawa">Adamawa</option>
-                <option value="Akwa Ibom">Akwa Ibom</option>
-                <option value="Anambra">Anambra</option>
-                <option value="Bauchi">Bauchi</option>
-                <option value="Bayelsa">Bayelsa</option>
-                <option value="Benue">Benue</option>
-                <option value="Borno">Borno</option>
-                <option value="Cross River">Cross River</option>
-                <option value="Delta">Delta</option>
-                <option value="Ebonyi">Ebonyi</option>
-                <option value="Edo">Edo</option>
-                <option value="Ekiti">Ekiti</option>
-                <option value="Enugu">Enugu</option>
-                <option value="Gombe">Gombe</option>
-                <option value="Imo">Imo</option>
-                <option value="Jigawa">Jigawa</option>
-                <option value="Kaduna">Kaduna</option>
-                <option value="Kano">Kano</option>
-                <option value="Katsina">Katsina</option>
-                <option value="Kebbi">Kebbi</option>
-                <option value="Kogi">Kogi</option>
-                <option value="Kwara">Kwara</option>
-                <option value="Lagos">Lagos</option>
-                <option value="Nasarawa">Nasarawa</option>
-                <option value="Niger">Niger</option>
-                <option value="Ogun">Ogun</option>
-                <option value="Ondo">Ondo</option>
-                <option value="Osun">Osun</option>
-                <option value="Oyo">Oyo</option>
-                <option value="Plateau">Plateau</option>
-                <option value="Rivers">Rivers</option>
-                <option value="Sokoto">Sokoto</option>
-                <option value="Taraba">Taraba</option>
-                <option value="Yobe">Yobe</option>
-                <option value="Zamfara">Zamfara</option>
-            </select>
-            <br><br>
-            <input type="text" name="Location" minlength="6" maxlength="50" required placeholder="Location" id="">
-            <br><br>
-            <input type="number" name="PostalCode" minlength="6" maxlength="6" required placeholder="PostalCode" id="">
-            <br><br>
-            <input type="tel" name="PhoneNumber" minlength="11" maxlength="11" required placeholder="Phone Number" id="">
-            <br><br>
-            <input type="password" name="Password" required minlength="6" placeholder="password" maxlength="14" id="">
-            <br><br>
-            <label for="HospitalDoc1">Hospital Doc1: images of your hospital </label>
-            <input type="file" name="HospitalDoc1" accept="image/*" required id="">
-            <br><br>
-            <label for="HospitalDoc2">Hospital Doc2: valid image of your hospital documentation only </label>
-            <input type="file" name="HospitalDoc2" accept="image/*" required id="">
-            <br><br>
-            <button type="submit">Register</button>
-        </form> 
-        <a href="/login">login</a>
-    </center>
-    </div>
+        <div class="container">
+                <h2><span>Register Hospital</span></h2>
+                <header><%= msg %></header>
+            <div class="input-fields">
+                <form action="/register" enctype="multipart/form-data" method="post">
+                    <input type="text" name="Name" placeholder="Name" id="" maxlength="30" minlength="7" required>
+                    <br><br>
+                    <input type="email" name="Email" placeholder="Email" maxlength="30" required minlength="7" id="">
+                    <br><br>
+                
+                    <select name="State" required  id="">
+                        <option disabled selected>--Select State--</option>
+                        <option value="Abia">Abia</option>
+                        <option value="Abuja">Abuja</option>
+                        <option value="Adamawa">Adamawa</option>
+                        <option value="Akwa Ibom">Akwa Ibom</option>
+                        <option value="Anambra">Anambra</option>
+                        <option value="Bauchi">Bauchi</option>
+                        <option value="Bayelsa">Bayelsa</option>
+                        <option value="Benue">Benue</option>
+                        <option value="Borno">Borno</option>
+                        <option value="Cross River">Cross River</option>
+                        <option value="Delta">Delta</option>
+                        <option value="Ebonyi">Ebonyi</option>
+                        <option value="Edo">Edo</option>
+                        <option value="Ekiti">Ekiti</option>
+                        <option value="Enugu">Enugu</option>
+                        <option value="Gombe">Gombe</option>
+                        <option value="Imo">Imo</option>
+                        <option value="Jigawa">Jigawa</option>
+                        <option value="Kaduna">Kaduna</option>
+                        <option value="Kano">Kano</option>
+                        <option value="Katsina">Katsina</option>
+                        <option value="Kebbi">Kebbi</option>
+                        <option value="Kogi">Kogi</option>
+                        <option value="Kwara">Kwara</option>
+                        <option value="Lagos">Lagos</option>
+                        <option value="Nasarawa">Nasarawa</option>
+                        <option value="Niger">Niger</option>
+                        <option value="Ogun">Ogun</option>
+                        <option value="Ondo">Ondo</option>
+                        <option value="Osun">Osun</option>
+                        <option value="Oyo">Oyo</option>
+                        <option value="Plateau">Plateau</option>
+                        <option value="Rivers">Rivers</option>
+                        <option value="Sokoto">Sokoto</option>
+                        <option value="Taraba">Taraba</option>
+                        <option value="Yobe">Yobe</option>
+                        <option value="Zamfara">Zamfara</option>
+                    </select>
+                    <br><br>
+                    
+                    <input type="text" name="Location" minlength="6" maxlength="50" required placeholder="Location" id="">
+                    <br><br>
+                    <input type="number" name="PostalCode" minlength="6" maxlength="6" required placeholder="PostalCode" id="">
+                    <br><br>
+                    <input type="tel" name="PhoneNumber" minlength="11" maxlength="11" required placeholder="Phone Number" id="">
+                    <br><br>
+                    <input type="password" name="Password" required minlength="6" placeholder="password" maxlength="14" id="">
+                    <br><br>
+                    
+                    <label for="HospitalDoc1">Hospital Doc1: images of your hospital </label>
+                    <input type="file" name="HospitalDoc1" accept="image/*" required id="hospitalimg1">
+                    <br><br>
+                    <label for="HospitalDoc2">Hospital Doc2: valid image of your hospital documentation only </label>
+                    <input type="file" name="HospitalDoc2" accept="image/*" required id="hospitalimg2">
+                    <br><br>
+                 </div>
+                 <div class="submit">
+                     <button type="submit"><h3 style="display: flex; align-self: center;padding-left: 175%;">Register</h3></button>
+                 </div>
+                 </form> 
+    <h3 style="color: #5a5959;">If you don't have an Account <a href="/login">login</a></h3>
+        </div>
+     </div>
 </body>
 </html>
